[metadata]
name = podqueue
version = 0.1.7
author = Tyler Quinlivan
description = Automate the archiving of podcast feeds, including show notes and images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tquin/podqueue
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    podqueue = podqueue
    = podqueue
packages = find:
python_requires = >=3.6

[options.packages.find]
where = podqueue